--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <h1>Kateryna Kravchuk</h1>
     <h3>Front-End developper based in Europe, Lyon</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="/about.html#contact" class="contact-link">Contact me</a>
+      <a href="/about.html" class="about-link">About me</a>
     </div>
 
     <div class="projects-wrapper m-md-5">
@@ -119,7 +119,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
             </p>
             <div class="navigation-links mt-5">
-              <a href="#" class="project-link">Launch Weather App</a>
+              <a href="https://playful-jalebi-6285b2.netlify.app" class="project-link">Launch Weather App</a>
             </div>
           </div>
         </div>
