--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="project m-md-5">
         <div class="row">
           <div class="col-md-6">
-<img src="src/images/weather.jpg" alt="Weather project image" class="img-fluid p-2 mb-4 rounded">
+<img src="src/images/weather.jpg" alt="Weather project image" class="img-fluid p-2 mb-4 shadow rounded">
           </div>
            <div class="col-md-6">
             <h2 class="mb-3"> Weather App</h2>
