styled images bootstrap classes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="project m-md-5">
         <div class="row">
           <div class="col-sm-6">
-<img src="src/images/painting.jpg" alt="Painting in France" class="img-fluid p-2 mb-4 shadow rounded">
+<img src="src/images/painting.jpg" alt="Painting in France" class="img-fluid rounded shadow d-none d-sm-block">
           </div>
            <div class="col-sm-6">
             <h2 class="mb-3"> Painting App</h2>
@@ -105,7 +105,7 @@
             </div>
           </div>
                     <div class="col-sm-6">
-<img src="src/images/interior design.jpg" alt="Interior design in France" class="img-fluid p-2 mb-4 shadow rounded">
+<img src="src/images/interior design.jpg" alt="Interior design in France" class="img-fluid rounded shadow d-none d-sm-block">
           </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
       <div class="project m-md-5">
         <div class="row">
           <div class="col-sm-6">
-<img src="src/images/weather.jpg" alt="Weather project image" class="img-fluid p-2 mb-4 shadow rounded">
+<img src="src/images/weather.jpg" alt="Weather project image" class="img-fluid rounded shadow d-none d-sm-block">
           </div>
            <div class="col-sm-6">
             <h2 class="mb-3"> Weather App</h2>
