added class "primary-link"

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <br />
     <h3>Front-End developper based in Europe, Lyon</h3>
     <div class="navigation-links">
-      <a href="/about.html#contact" class="contact-link" title="contact Kateryna Kravchuk">Contact me</a>
-      <a href="/about.html" class="about-link" title="information about Kateryna Kravchuk">About me</a>
+      <a href="/about.html#contact" class="contact-link primary-link" title="contact Kateryna Kravchuk">Contact me</a>
+      <a href="/about.html" class="about-link primary-link" title="information about Kateryna Kravchuk">About me</a>
     </div>
 
     <div class="projects-wrapper m-md-5">
@@ -85,7 +85,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
             </p>
             <div class="navigation-links mt-5">
-              <a href="#" class="project-link" title="Painting in France">Launch Painting App</a>
+              <a href="#" class="project-link primary-link" title="Painting in France">Launch Painting App</a>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
             </p>
             <div class="navigation-links mt-5">
-              <a href="#" class="project-link" title="Interior design in France">Launch Interior Design App</a>
+              <a href="#" class="project-link primary-link" title="Interior design in France">Launch Interior Design App</a>
             </div>
           </div>
                     <div class="col-sm-6">
@@ -121,7 +121,7 @@
             <p class="text-left">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
             </p>
-            <div class="navigation-links mt-5">
+            <div class="navigation-links primary-link mt-5">
               <a href="https://playful-jalebi-6285b2.netlify.app" target="_blank" class="project-link">Launch Weather App</a>
                       </div>
           </div>
