--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <p class="text-left">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
             </p>
-            <div class="navigation-links primary-link mt-5">
+            <div class="project-link primary-link">
               <a href="https://playful-jalebi-6285b2.netlify.app" target="_blank" class="project-link">Launch Weather App</a>
                       </div>
           </div>
