--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         </div>
       </div>
 
+
       <div class="project m-md-5">
         <div class="row">
           <div class="col-sm-6">
@@ -121,8 +122,8 @@
             <p class="text-left">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
             </p>
-            <div class="project-link primary-link">
-              <a href="https://playful-jalebi-6285b2.netlify.app" target="_blank" class="project-link">Launch Weather App</a>
+            <div class="navigation-links mt-5">
+              <a href="https://playful-jalebi-6285b2.netlify.app" target="_blank" class="project-link primary-link">Launch Weather App</a>
                       </div>
           </div>
         </div>
