Updated weather app link

--- a/index.html
+++ b/index.html
@@ -122,9 +122,18 @@
             <p class="text-left">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
             </p>
+
             <div class="navigation-links mt-5">
               <a href="https://playful-jalebi-6285b2.netlify.app" target="_blank" class="project-link primary-link">Launch Weather App</a>
                       </div>
+                      </div>
+
+
+
+
+
+
+
           </div>
         </div>
       </div>
