--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h3>Front-End developper based in Europe, Lyon</h3>
     <div class="navigation-links">
       <a href="/about.html#contact" class="contact-link primary-link" title="contact Kateryna Kravchuk">Contact me</a>
-      <a href="/about.html" class="about-link primary-link" title="information about Kateryna Kravchuk">About me</a>
+      <a href="/about.html" class="about-link secondary-link" title="information about Kateryna Kravchuk">About me</a>
     </div>
 
     <div class="projects-wrapper m-md-5">
