Updated div class hero

--- a/index.html
+++ b/index.html
@@ -62,14 +62,18 @@
         </div>
       </nav>
     </div>
-    <h2>🌠Hi, I am</h2>
-    <h1>Kateryna Kravchuk</h1>
-    <br />
-    <h3>Front-End developper based in Europe, Lyon</h3>
-    <div class="navigation-links">
-      <a href="/about.html#contact" class="contact-link primary-link" title="contact Kateryna Kravchuk">Contact me</a>
-      <a href="/about.html" class="about-link secondary-link" title="information about Kateryna Kravchuk">About me</a>
+   
+<div class="hero">
+      <p>👋Hi, I am</p>
+      <h1 class="mb-3">Kateryna Kravchuk</h1>
+      <h2 class="mb-3">Front-End Developer</h2>
+      <div>
+        <a href="/about.html#contact" class="btn btn-branding">Contact me</a>
+        <a href="/about.html" class="btn btn-branding">Contact me</a>
+      </div>
     </div>
+    <p>Welcome to look on my latest projects</p>
+
 
     <div class="projects-wrapper m-md-5">
   
