--- a/index.html
+++ b/index.html
@@ -66,15 +66,14 @@
 <div class="hero">
       <p>👋Hi, I am</p>
       <h1 class="mb-3">Kateryna Kravchuk</h1>
-      <h2 class="mb-3">Front-End Developer</h2>
+      <h2 class="mb-5">Front-End Developer</h2>
       <div>
         <a href="/about.html#contact" class="btn btn-branding">Contact me</a>
-        <a href="/about.html" class="btn btn-branding">Contact me</a>
+        <a href="/about.html" class="btn btn-branding">About me</a>
       </div>
-      <p>Welcome to look on my latest projects</p>
-    </div>
+      </div>
     
-
+<h2 class="text-center m-5">Welcome to look on my latest projects</h2>
 
     <div class="projects-wrapper m-md-5">
   
@@ -84,13 +83,16 @@
 <img src="src/images/painting.jpg" alt="Painting in France" class="img-fluid rounded shadow d-none d-sm-block">
           </div>
            <div class="col-sm-6">
-            <h2 class="mb-3"> Painting App</h2>
+            <h2 class="mb-5"> Painting App</h2>
            
-            <p class="text-left">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
+            <p class="mb-5">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
             </p>
             <div class="navigation-links mt-5">
-              <a href="#" class="project-link primary-link" title="Painting in France">Launch Painting App</a>
+              <a href="#" class="btn btn-branding-outline" title="Painting in France">Launch Painting App</a>
             </div>
           </div>
         </div>
