--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
            <div class="col-sm-6">
             <h2 class="mb-5"> Painting App</h2>
            
-            <p class="mb-5">
+            <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
               they live in Bookmarksgrove right at the coast of the Semantics, a
