added a div "project-description"

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 <img src="src/images/painting.jpg" alt="Painting in France" class="img-fluid rounded shadow d-none d-sm-block">
           </div>
            <div class="col-sm-6">
+            <div class="project-description">
             <h2 class="mb-5"> Painting App</h2>
            
             <p class="mb-5 text-muted">
@@ -93,6 +94,7 @@
             </p>
             <div class="navigation-links mt-5">
               <a href="#" class="btn btn-branding-outline" title="Painting in France">Launch Painting App</a>
+            </div>
             </div>
           </div>
         </div>
