added d-lg-block to the img

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="project m-md-5">
         <div class="row">
           <div class="col-sm-6">
-<img src="src/images/painting.jpg" alt="Painting in France" class="img-fluid d-none d-md-block">
+<img src="src/images/painting.jpg" alt="Painting in France" class="img-fluid d-none d-lg-block">
           </div>
            <div class="col-sm-6">
             <div class="project-description">
