--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
   
       <div class="project m-md-5">
         <div class="row">
-          <div class="col-sm-6">
-<img src="src/images/painting.jpg" alt="Painting in France" class="img-fluid d-none d-lg-block">
+          <div class="col d-none d-lg-block">
+<img src="src/images/painting.jpg" alt="Painting in France" class="img-fluid ">
           </div>
-           <div class="col-sm-6">
+           <div class="col">
             <div class="project-description">
             <h2 class="mb-5"> Painting App</h2>
            
