--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
               <a href="#" class="btn btn-branding-outline" title="Painting in France">Launch Painting App</a>
             </div>
             </div>
+</div>
 
             <div class="row">
           <div class="col d-none d-lg-block">
@@ -135,7 +136,7 @@
               <a href="#" class="btn btn-branding-outline" title="Painting in France">Launch Painting App</a>
             </div>
             </div>
-
+</div>
        
       
 
