--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 <div class="hero">
       <p>👋Hi, I am</p>
       <h1 class="mb-3">Kateryna Kravchuk</h1>
-      <h2 class="mb-5">Front-End Developer</h2>
-      <div>
-        <a href="/about.html#contact" class="btn btn-branding">Contact me</a>
-        <a href="/about.html" class="btn btn-branding">About me</a>
+      <h2 class="mb-5">Front-End Developer based in Europe, France</h2>
+      <div class="navigation-links d-flex justify-content-center">
+        <a href="/about.html#contact" class="primary-link">Contact me</a>
+        <a href="/about.html" class="secondary-link">About me</a>
       </div>
       </div>
     
@@ -95,7 +95,7 @@
               large language ocean. A small river named Duden flows by
             </p>
             <div class="navigation-links mt-5">
-              <a href="#" class="btn btn-branding-outline" title="Painting in France">Launch Painting App</a>
+              <a href="#" class="btn btn-branding" title="Painting in France">Launch Painting App</a>
             </div>
             </div>
              </div>
@@ -113,7 +113,7 @@
               large language ocean. A small river named Duden flows by
             </p>
             <div class="navigation-links mt-5">
-              <a href="#" class="btn btn-branding-outline" title="Interior design">Launch Painting App</a>
+              <a href="#" class="btn btn-branding" title="Interior design">Launch Painting App</a>
             </div>
             </div>
             </div>
@@ -137,7 +137,7 @@
               large language ocean. A small river named Duden flows by
             </p>
             <div class="navigation-links mt-5">
-              <a href="#" class="btn btn-branding-outline" title="Weather forecast">Launch Painting App</a>
+              <a href="#" class="btn btn-branding" title="Weather forecast">Launch Painting App</a>
             </div>
             </div>
 </div>
