--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="row mb-3">
             <div class="col">
             <div class="project-description">
-            <h2 class="mb-5"> Interior Design Application</h2>
+            <h2> Interior Design Application</h2>
            
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
