Replaced the link Contact me to Work page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h1 class="mb-3">Kateryna Kravchuk</h1>
       <h2 class="mb-5">Front-End Developer based in Europe, France</h2>
       <div class="navigation-links d-flex justify-content-center">
-        <a href="/about.html#contact" class="primary-link">Contact me</a>
+        <a href="/work.html" class="primary-link">Work Page</a>
         <a href="/about.html" class="secondary-link">About me</a>
       </div>
       </div>
