--- a/work.html
+++ b/work.html
@@ -32,9 +32,49 @@
 
   <body>
     <div class="content-container">
-      <div class="row">
-        <div class="content">
-          <h1 class="mb-4">Hello, I am Kateryna Kravchuk</h1>
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img
+              src="src/images/painting.jpg"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Painting App</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <img
+              src="src/images/interior design.jpg"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Interior Design App</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="src/images/weather.jpg"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Weather App</h3>
+            <p class="text-center text-muted">
+              Built with HTML,CSS and Java Script
+            </p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="src/images/painting.jpg"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Translation App</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
         </div>
       </div>
     </div>
