--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <h1 class="mb-3">Kateryna Kravchuk</h1>
       <h2 class="mb-5">Front-End Developer based in Europe, France</h2>
       <div class="navigation-links d-flex justify-content-center">
-        <a href="/work.html" class="primary-link">Work Page</a>
-        <a href="/about.html" class="secondary-link">About me</a>
+        <a href="/work.html" class="btn btn-branding">Work Page</a>
+        <a href="/about.html" class="btn btn-branding">About me</a>
       </div>
       </div>
     
@@ -67,6 +67,7 @@
           <div class="col d-none d-lg-block">
 <img src="src/images/painting.jpg" alt="Painting in France" class="img-fluid ">
           </div>
+
            <div class="col">
             <div class="project-description">
             <h2 class="mb-5"> Painting Application</h2>
@@ -96,7 +97,7 @@
               large language ocean. A small river named Duden flows by
             </p>
             <div class="navigation-links mt-5">
-              <a href="#" class="primary-link" title="Interior design">Launch Painting App</a>
+              <a href="#" class="btn btn-branding" title="Interior design">Launch Painting App</a>
             </div>
             </div>
             </div>
@@ -120,7 +121,7 @@
               large language ocean. A small river named Duden flows by
             </p>
             <div class="navigation-links mt-5">
-              <a href="#" class="primary-link" title="Weather forecast">Launch Painting App</a>
+              <a href="#" class="btn btn-branding" title="Weather forecast">Launch Painting App</a>
             </div>
             </div>
 </div>
