--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,7 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
-      crossorigin="anonymous"
-    ></script>
+   <script src="https://kit.fontawesome.com/74cd22f730.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
