--- a/about.html
+++ b/about.html
@@ -31,58 +31,36 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-      <a class="navbar-brand" href="/"
-        ><img src="src/images/logo.png" class="logo fluid" alt=""
-      /></a>
-
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/"
-              >Home <span class="sr-only">(current)</span></a
-            >
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img
+            src="src/images/logo.png"
+            class="logo d-none d-md-block"
+            alt=""
+          />
+          <img
+            src="src/images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+        </a>
+        <ul>
+          <li class="active">
+            <a href="/"> Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+          <li>
+            <a href="/about.html"> About</a>
           </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle active"
-              href="/work.html"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Work
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
+          <li>
+            <a href="/work.html"> Work</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="/contact.html">Contact</a>
+          <li>
+            <a href="/contact.html"> Contact</a>
           </li>
         </ul>
-      </div>
-    </nav>
+      </nav>
+    </div>
 
     <div class="content-container">
       <div class="row">
