Added Seo titles and footers to all pages

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
           <img
             src="src/images/logo.png"
             class="logo d-none d-md-block"
-            alt=""
+            alt="Kateryna Kravchuk logo"
           />
           <img
             src="src/images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Kateryna Kravchuk logo"
           />
         </a>
         <ul>
-          <li class="active">
+          <li>
             <a href="/"> Home</a>
           </li>
-          <li>
+          <li class="active">
             <a href="/about.html"> About</a>
           </li>
           <li>
@@ -85,7 +85,7 @@
         <div class="col d-none d-lg-block">
           <img
             src="src/images/painting.jpg"
-            alt="Painting in France"
+            alt="Painting in France preview"
             class="img-fluid"
           />
         </div>
@@ -102,7 +102,10 @@
             </p>
 
             <div class="navigation-links mt-5">
-              <a href="#" class="btn btn-branding" title="Painting in France"
+              <a
+                href="/work.html"
+                class="btn btn-branding"
+                title="Painting in France"
                 >Launch Painting App</a
               >
             </div>
@@ -122,7 +125,10 @@
               large language ocean. A small river named Duden flows by
             </p>
             <div class="navigation-links mt-5">
-              <a href="#" class="btn btn-branding" title="Interior design"
+              <a
+                href="/work.html"
+                class="btn btn-branding"
+                title="Interior design"
                 >Launch Painting App</a
               >
             </div>
@@ -131,7 +137,7 @@
         <div class="col d-none d-lg-block">
           <img
             src="src/images/interior design.jpg"
-            alt="Interior design"
+            alt="Interior design app preview"
             class="img-fluid"
           />
         </div>
@@ -141,7 +147,7 @@
         <div class="col d-none d-lg-block">
           <img
             src="src/images/weather.jpg"
-            alt="Weather forecast"
+            alt="Weather forecast preview"
             class="img-fluid"
           />
         </div>
@@ -156,7 +162,10 @@
               large language ocean. A small river named Duden flows by
             </p>
             <div class="navigation-links mt-5">
-              <a href="#" class="btn btn-branding" title="Weather forecast"
+              <a
+                href="/work.html"
+                class="btn btn-branding"
+                title="Weather forecast"
                 >Launch Painting App</a
               >
             </div>
@@ -166,11 +175,16 @@
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding m-3">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding m-3"
+              title="Contact Kateryna Kravchuk"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
@@ -180,16 +194,36 @@
         </div>
 
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.instagram.com/cateinfr" target="_blank">
+          <a
+            href="https://www.instagram.com/cateinfr"
+            target="_blank"
+            title="Instagram profile"
+          >
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="https://github.com/kate-kravchuk" target="_blank">
+          <a
+            href="https://github.com/kate-kravchuk"
+            target="_blank"
+            title="GitHub profile"
+          >
             <i class="fa-brands fa-github"></i>
           </a>
-          <a href="https://www.facebook.com/kattie.kravchuk" target="_blank">
+          <a
+            href="https://www.facebook.com/kattie.kravchuk"
+            target="_blank"
+            title="Facebook profile"
+          >
             <i class="fa-brands fa-facebook"></i>
           </a>
         </div>
+        <p class="annotation-code text-center mt-4">
+          This project was coded by Kateryna Kravchuk, and it is
+          <a
+            href="https://github.com/kate-kravchuk/Potfolio-Kateryna-Kravchuk"
+            target="_blank"
+            >open sourced</a
+          >🥑
+        </p>
       </footer>
     </div>
   </body>
