--- a/about.html
+++ b/about.html
@@ -42,17 +42,17 @@
           <img
             src="src/images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Kateryna Kravchuk logo"
           />
         </a>
         <ul>
-          <li class="active">
+          <li>
             <a href="/"> Home</a>
           </li>
           <li>
             <a href="/about.html"> About</a>
           </li>
-          <li>
+          <li class="active">
             <a href="/work.html"> Work</a>
           </li>
           <li>
@@ -65,7 +65,7 @@
     <div class="content-container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="content">
+          <div class="content text-center">
             <h1 class="mb-4">Hello, I am Kateryna Kravchuk</h1>
             <h2 clas="mb-4">Front-End Developer, based in Europe</h2>
             <p class="mb-4">
@@ -85,6 +85,59 @@
           />
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding m-3"
+              title="Contact Kateryna Kravchuk"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:kravchuk.kattie@gmail.com"
+            >kravchuk.kattie@gmail.com
+          </a>
+        </div>
+
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/cateinfr"
+            target="_blank"
+            title="Instagram profile"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://github.com/kate-kravchuk"
+            target="_blank"
+            title="GitHub profile"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a
+            href="https://www.facebook.com/kattie.kravchuk"
+            target="_blank"
+            title="Facebook profile"
+          >
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+        <p class="annotation-code text-center mt-4">
+          This project was coded by Kateryna Kravchuk, and it is
+          <a
+            href="https://github.com/kate-kravchuk/Potfolio-Kateryna-Kravchuk"
+            target="_blank"
+            >open sourced</a
+          >🥑
+        </p>
+      </footer>
     </div>
   </body>
 </html>
