--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes Portfolio</title>
+    <meta
+      name="description"
+      content="Contact Kateryna Kravchuk, a front-end developer based in Lyon, France, check out her projects and contact her for job inquiries"
+    />
+    <title>Kateryna Kravchuk, front-end engineer</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -24,11 +28,14 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-   <script src="https://kit.fontawesome.com/74cd22f730.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/74cd22f730.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
-      <div class="container">
+    <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/">
           <img
@@ -39,7 +46,7 @@
           <img
             src="src/images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Kateryna Kravchuk logo"
           />
         </a>
         <ul>
@@ -63,13 +70,78 @@
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>E-mail</h3>
-        
-        <p><a href="mailtokravchuk.kattie@gmail.com" target="_blank">kravchuk.kattie@gmail.com</a></p>
+
+        <p>
+          <a href="mailtokravchuk.kattie@gmail.com" target="_blank"
+            >kravchuk.kattie@gmail.com</a
+          >
+        </p>
         <h3>Facebook</h3>
-        <p><a href="https://www.facebook.com/kattie.kravchuk" target="_blank">Екатерина Кравчук</a>
-            </p>
+        <p>
+          <a href="https://www.facebook.com/kattie.kravchuk" target="_blank"
+            >kattie.kravchuk</a
+          >
+        </p>
         <h3>Instagram</h3>
-        <p><a href="https://www.instagram.com/cateinfr" target="_blank">@cateinfr</a></p>
+        <p>
+          <a href="https://www.instagram.com/cateinfr" target="_blank"
+            >@cateinfr</a
+          >
+        </p>
+      </div>
     </div>
+    <footer>
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding m-3"
+            title="Contact Kateryna Kravchuk"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:kravchuk.kattie@gmail.com"
+          >kravchuk.kattie@gmail.com
+        </a>
+      </div>
+
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.instagram.com/cateinfr"
+          target="_blank"
+          title="Instagram profile"
+        >
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a
+          href="https://github.com/kate-kravchuk"
+          target="_blank"
+          title="GitHub profile"
+        >
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a
+          href="https://www.facebook.com/kattie.kravchuk"
+          target="_blank"
+          title="Facebook profile"
+        >
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+      </div>
+      <p class="annotation-code text-center mt-4">
+        This project was coded by Kateryna Kravchuk, and it is
+        <a
+          href="https://github.com/kate-kravchuk/Potfolio-Kateryna-Kravchuk"
+          target="_blank"
+          >open sourced</a
+        >🥑
+      </p>
+    </footer>
   </body>
 </html>
