--- a/work.html
+++ b/work.html
@@ -37,16 +37,16 @@
           <img
             src="src/images/logo.png"
             class="logo d-none d-md-block"
-            alt=""
+            alt="Kateryna Kravchuk logo"
           />
           <img
             src="src/images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Kateryna Kravchuk logo"
           />
         </a>
         <ul>
-          <li class="active">
+          <li>
             <a href="/"> Home</a>
           </li>
           <li>
@@ -55,7 +55,7 @@
           <li>
             <a href="/work.html"> Work</a>
           </li>
-          <li>
+          <li class="active">
             <a href="/contact.html"> Contact</a>
           </li>
         </ul>
@@ -71,7 +71,7 @@
             <img
               src="src/images/painting.jpg"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Painting App preview"
             />
             <h3 class="text-center m-0">Painting App</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
@@ -81,7 +81,7 @@
             <img
               src="src/images/interior design.jpg"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Interior Design App preview"
             />
             <h3 class="text-center m-0">Interior Design App</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
@@ -90,7 +90,7 @@
             <img
               src="src/images/weather.jpg"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Weather App preview"
             />
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">
@@ -101,13 +101,66 @@
             <img
               src="src/images/painting.jpg"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Painting in France"
             />
             <h3 class="text-center m-0">Translation App</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding m-3"
+              title="Contact Kateryna Kravchuk"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:kravchuk.kattie@gmail.com"
+            >kravchuk.kattie@gmail.com
+          </a>
+        </div>
+
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/cateinfr"
+            target="_blank"
+            title="Instagram profile"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://github.com/kate-kravchuk"
+            target="_blank"
+            title="GitHub profile"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a
+            href="https://www.facebook.com/kattie.kravchuk"
+            target="_blank"
+            title="Facebook profile"
+          >
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+        <p class="annotation-code text-center mt-4">
+          This project was coded by Kateryna Kravchuk, and it is
+          <a
+            href="https://github.com/kate-kravchuk/Potfolio-Kateryna-Kravchuk"
+            target="_blank"
+            >open sourced</a
+          >🥑
+        </p>
+      </footer>
     </div>
   </body>
 </html>
