--- a/about.html
+++ b/about.html
@@ -86,12 +86,12 @@
         </div>
       </div>
       <footer>
-        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
-          <div>
+        <div class="contact-box justify-content-center mb-5 d-none d-md-flex">
+          <div class="form-parts">
             <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
-          <div>
+          <div class="form-parts">
             <a
               href="/contact.html"
               class="btn btn-branding m-3"
