--- a/work.html
+++ b/work.html
@@ -73,8 +73,8 @@
               class="img-fluid mb-3 rounded"
               alt="Painting App preview"
             />
-            <h3 class="text-center m-0">Painting App</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <h3 class="m-0">Painting App</h3>
+            <p class="text-muted">Built with HTML and CSS</p>
           </div>
 
           <div class="col-md-6 mb-4">
@@ -83,8 +83,8 @@
               class="img-fluid mb-3 rounded"
               alt="Interior Design App preview"
             />
-            <h3 class="text-center m-0">Interior Design App</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <h3 class="m-0">Interior Design App</h3>
+            <p class="text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
             <img
@@ -92,10 +92,8 @@
               class="img-fluid mb-3 rounded"
               alt="Weather App preview"
             />
-            <h3 class="text-center m-0">Weather App</h3>
-            <p class="text-center text-muted">
-              Built with HTML,CSS and Java Script
-            </p>
+            <h3 class="m-0">Weather App</h3>
+            <p class="text-muted">Built with HTML,CSS and Java Script</p>
           </div>
           <div class="col-md-6 mb-4">
             <img
@@ -103,8 +101,8 @@
               class="img-fluid mb-3 rounded"
               alt="Painting in France"
             />
-            <h3 class="text-center m-0">Translation App</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <h3 class="m-0">Translation App</h3>
+            <p class="text-muted">Built with HTML and CSS</p>
           </div>
         </div>
       </div>
