Turned the image weather app onto a link

--- a/work.html
+++ b/work.html
@@ -87,11 +87,13 @@
             <p class="text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
-            <img
-              src="src/images/weather.jpg"
-              class="img-fluid mb-3 rounded"
-              alt="Weather App preview"
-            />
+            <a href="https://playful-jalebi-6285b2.netlify.app/">
+              <img
+                src="src/images/weather.jpg"
+                class="img-fluid mb-3 rounded"
+                alt="Weather App preview"
+              />
+            </a>
             <h3 class="m-0">Weather App</h3>
             <p class="text-muted">Built with HTML,CSS and Java Script</p>
           </div>
